2014-03-05  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0+beta7.

2014-03-05  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 7.0+beta6 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Explicitly prevent bison generated files from being
	considered for the source tarball.

2014-03-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* omp/omp.c, omp/omp.h (omp_modify_task_file, omp_delete_task)
	(omp_delete_report): Revert removal as still being used.

2014-03-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_server.h: Include gnutls/x509.h instead of
	gnutls/abstract.h as it is sufficient for prior client certificates
	changes and is present in older gnutls releases.

2014-03-04  Henri Doreau <henri.doreau@gmail.com>

	* misc/plugutils.c (plug_get_key): Minor style fix.

2014-03-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/certificate.c (certificate_create_full, certificate_trusted)
	(certificates_size, certificates_find), base/nvti.c
	(nvti_cvss_base_vector, nvti_cvss, nvti_as_text)
	(nvti_as_openvas_nvt_cache_entry, nvtis_size), base/openvas_compress.c
	(openvas_compress_string), base/openvas_file.c
	(openvas_file_read_b64_encode), base/openvas_networking.c
	(openvas_source_iface_str), base/openvas_string.c (openvas_isalnumstr)
	(openvas_isbase64, openvas_string_list_to_xml), base/settings.c
	(settings_init, settings_set, settings_save, init_settings_iterator)
	omp/omp.c (omp_authenticate_env, omp_create_task_rc_file,
	(omp_start_task, omp_abort_task, omp_resume_stopped_task)
	(get_omp_response_503, omp_get_nvt_all, omp_get_nvt_feed_checksum)
	(omp_get_dependencies_503, omp_wait_for_task_start)
	(omp_wait_for_task_end, omp_wait_for_task_stop, omp_wait_for_task_delete)
	(omp_delete_task, omp_get_status, omp_get_tasks, omp_get_report)
	(omp_get_report_format, omp_delete_report, omp_get_results)