@@ -53,6 +53,7 @@ misc/network.[c|h]: LGPLv2+
 misc/nvt_categories.h: LGPLv2+
 misc/openvas_auth.[c|h]: GPLv2+
 misc/openvas_logging.[c|h]: GPLv2+
+misc/openvas_proctitle.[c|h]: GPLv2+
 misc/openvas_server.[c|h]: GPLv2+
 misc/openvas_ssh_login.[c|h]: GPLv2+
 misc/openvas_uuid.[c|h]: GPLv2+
@@ -61,7 +62,6 @@ misc/pcap.c: LGPLv2+
 misc/pcap_openvas.h: LGPLv2+
 misc/plugutils.[c|h]: LGPLv2+
 misc/popen.[c|h]: LGPLv2+
-misc/proctitle.[c|h]: GPLv2
 misc/rand.[c|h]: LGPLv2+
 misc/resource_request.[c|h]: GPLv2
 misc/scanners_utils.[c|h]: LGPLv2+
